--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "start": "remix-serve build"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.4",
+    "@heroicons/react": "^2.0.13",
     "@remix-run/node": "^1.7.5",
     "@remix-run/react": "^1.7.5",
     "@remix-run/serve": "^1.7.5",
@@ -20,9 +22,11 @@
   "devDependencies": {
     "@remix-run/dev": "^1.7.5",
     "@remix-run/eslint-config": "^1.7.5",
+    "@tailwindcss/line-clamp": "^0.4.2",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "autoprefixer": "^10.4.13",
+    "classnames": "^2.3.2",
     "concurrently": "^7.5.0",
     "eslint": "^8.23.1",
     "postcss": "^8.4.18",
